[package]
name = "modcxx"
version = "0.1.0"
edition = "2021"

[dependencies]
clap          = { version = ">=4", features = ["derive"] }
thiserror     = { version = ">=1" }
rug           = { version = ">=1.2" }
egg           = { version = ">=0.9", features = ["lp"] }
ordered-float = { version = ">=4.2" }
[dev-dependencies]
pretty_assertions = { version = ">=1.4" }

[[bin]]
name = "modcxx"
path = "src/main.rs"
